# cvhub-ocr

./: README.md  main.py  pyproject.toml
proto/: ocr.proto
src/: server.py
src/detector/: paddle_detector.py
src/engine/: base_engine.py  paddle_engine.py
src/preprocess/: image_processor.py
src/utils/: utils.py
tests/intergration/: conftest.py  test_paddle_detector.py  test_paddle_engine.py  test_paddle_recognizer.py
tests/unit/: test_engine_factory.py  test_preprocessor.py  test_utils.py
